added header of cards and its tests

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                 <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg"><g stroke="#000" stroke-width="2" fill="none" fill-rule="evenodd"><path d="M1 19L19 1M1 1l18 18"/></g></svg>
             </button>
         </aside>
-        <main role="main">
+        <main id="root" role="main">
             <!-- Start: Implementation -->
             👉 Your code goes here 👈
             <!-- End: Implementation -->
