seo optimized with meta tags to share link

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rule of Thumb™️ - Voice Your Opinion</title>
+    <meta name="description" content="Rule of Thumb™️ lets you vote on trending and controversial figures in politics, business, entertainment, and more. Share your opinion with a simple thumbs up or down, and see real-time sentiment from users around the world.">
+    <meta name="keywords" content="Rule of Thumb, Vote, Public Opinion, Sentiment, Celebrities, Politics, Business, Media, Entertainment">
+    <meta name="author" content="Rule of Thumb™️">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sebastian-ardila.github.io/ui-test-formula/">
+    <meta property="og:title" content="Rule of Thumb™️ - Voice Your Opinion">
+    <meta property="og:description" content="Vote on trending and controversial figures across various fields. Share your opinion with a thumbs up or down, and see what the world thinks.">
+    <meta property="og:image" content="https://sebastian-ardila.github.io/ui-test-formula/assets/img/bg-people.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sebastian-ardila.github.io/ui-test-formula/">
+    <meta property="twitter:title" content="Rule of Thumb™️ - Voice Your Opinion">
+    <meta property="twitter:description" content="Vote on trending and controversial figures across various fields. Share your opinion with a thumbs up or down, and see what the world thinks.">
+    <meta property="twitter:image" content="https://sebastian-ardila.github.io/ui-test-formula/assets/img/bg-people.png">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
+
     <title>Rule of Thumb</title>
+    
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 </head>
